# MijiaAPI-MCP

./: .gitignore  FINAL_PUSH.md  INSTALLATION_SUCCESS.md  MANIFEST.in  MANUAL_PUSH_STEPS.md  OPTIMIZATION_SUMMARY.md  PUBLISH.md  PUSH_GUIDE.md  PUSH_NOW.md  README.md  STRUCTURE.txt  __init__.py  mcp-config-example.json  package-lock.json  package.json  push_to_github.bat  pyproject.toml  release.py  setup.py  tsconfig.json
.github/workflows/: build.yml  release.yml
adapter/: __init__.py  mijia_adapter.py  mijia_tool.py
config/: .env.example  README.md  mcp-config-example.json
doc/: DEVELOPMENT.md  EXAMPLES.md  PROJECT_STRUCTURE.md  README.md  SETUP_GUIDE.md  TEST_REPORT.md
mcp_server/: server.ts
mijia-api-main/mijiaAPI/: apis.py  logger.py
python_scripts/: control_device.py  get_device_status.py  get_mijia_devices.py  get_mijia_devices_real.py  mijia_tool.py  requirements.txt
src/: index.ts
utils/: test_adapter.py  test_environment.py  test_server.mjs
